# Kivo

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/src/http/: client.rs  models.rs
desktop/src/storage/: mod.rs  tests.rs
docs/superpowers/plans/: 2026-04-09-macos-build.md
docs/superpowers/specs/: 2026-04-09-macos-build-design.md
src/app/: App.jsx
src/components/ui/: JsonTree.jsx
src/components/workspace/: CollectionSettingsPage.jsx  EnvEditor.jsx  RequestPane.jsx  ResponsePane.jsx  SetupWizard.jsx  Sidebar.jsx  WorkspaceView.jsx
src/hooks/: use-collection-config.js  use-env.js  use-workspace-store.js
src/lib/: http-client.js  http-ui.js  json-filter.js  workspace-store.js
