[package]
name = "kivo"
version = "0.1.0"
description = "A minimal cross-platform HTTP client built with Rust and Tauri for fast and simple API testing."
authors = ["dexter-xD"]
license = "MIT"
repository = "https://github.com/dexter-xD/Kivo"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
